--- a/goit-markup-hw-02/css/style.css
+++ b/goit-markup-hw-02/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;1,300&family=Roboto:wght@400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
 
 * {
     padding: 0;
@@ -35,7 +35,7 @@ button:hover {
 }
 
 .logo {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     color: var(--color-text-on);
     font-style: normal;
     font-weight: 700;
@@ -62,7 +62,7 @@ button:hover {
 }
 
 
-.link-buttons:active {
+.link-buttons:hover {
     color: var(--color-text-on);
 }
 
